test/compare/testdata/fixedbugs/issue563.go
// errorcheck

package main

func main() {
	>5 // ERROR `unexpected >, expecting }`
}
